cmd/fctl/test-data/confighub.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: prod
  labels:
    app: app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: foo.example.net
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9090
  selector:
    app: app
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: prod
  labels:
    app: app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: foo.example.net
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  type: ClusterIP
  ports:
    - name: worker
      port: 9091
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: prod
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        app.kubernetes.io/name: app
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      imagePullSecrets:
        - name: ghcr-secret
      initContainers:
        - name: db-init
          image: ghcr.io/example/example:latest
          command: ["/srv/app/server"]
          args: ["db", "init"]
          envFrom:
            - configMapRef:
                name: env
            - secretRef:
                name: secret-env
        - name: db-migrate
          image: ghcr.io/example/example:latest
          command: ["/srv/app/server"]
          args: ["db", "migrate"]
          envFrom:
            - configMapRef:
                name: env
            - secretRef:
                name: secret-env
      containers:
        - name: server
          image: ghcr.io/example/example:latest
          imagePullPolicy: Always
          envFrom:
            - configMapRef:
                name: env
            - secretRef:
                name: secret-env
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
            - containerPort: 9091
              name: worker
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 9090
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 9090
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 9090
            initialDelaySeconds: 5
            failureThreshold: 5
            periodSeconds: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 512Gi
              cpu: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
