cmd/fctl/test-data/deployment-lint-anchors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchor-test
  namespace: example
  labels: &common-labels
    app: anchor-test
    team: platform
spec:
  replicas: 3
  selector:
    matchLabels: *common-labels
  template:
    metadata:
      labels: *common-labels
    spec:
      containers:
        - name: nginx
          image: nginx:latest
