cmd/fctl/test-data/deployment-with-env.yaml
apiVersion: apps/v1              
kind: Deployment                 
metadata:                        
  labels:                        
    app: mydep                   
  name: mydep                    
  namespace: example             
spec:                            
  replicas: 3                    
  selector:                      
    matchLabels:                 
      app: mydep                 
  strategy: {}                   
  template:                      
    metadata:                    
      labels:                    
        app: mydep               
    spec:                        
      containers:                
      - image: nginx:latest      
        name: nginx              
        ports:                   
        - containerPort: 8080    
        resources: {}            
        env:
        - name: SUCCESS
          value: "false"
        - name: HOPE
          value: "false"
