cmd/fctl/test-data/deployment.yaml
# Document header comment
---
# Regular head comment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mydep
  annotations:
    confighub.com/key: something
  name: mydep
  namespace: example
  # Foot comment
spec:
  replicas: 3 # Line comment on replicas
  paused: false
  selector:
    matchLabels:
      app: mydep
  strategy: {}
  # Line head comment
  template:
    metadata:
      labels:
        app: mydep
    spec:
      dnsPolicy: ClusterFirst
      containers:
        # Array comment
        - image: nginx:latest
          name: nginx
          ports:
            - containerPort: 8080
          resources: {}
        # Internal array comment
        - image: otel/opentelemetry-collector:latest-amd64
          name: otel-sidecar
          ports: # Middle line comment
            - containerPort: 4318
