cmd/fctl/test-data/deployment10.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mydep
  annotations:
    confighub.com/key: something
  name: mydep
  namespace: example
spec:
  replicas: 10
  paused: false
  selector:
    matchLabels:
      app: mydep
  strategy: {}
  template:
    metadata:
      labels:
        app: mydep
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      - image: otel/opentelemetry-collector:latest-amd64
        name: otel-sidecar
        ports:
        - containerPort: 4318
