cmd/fctl/test-data/namespace-update.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foobar
  labels:
    labelkey: labelvalue
spec: {}
